--- a/src/Kanary2.scss
+++ b/src/Kanary2.scss
@@ -59,3 +59,16 @@ a {
   justify-content: center;
   align-items: center;
 }
+
+.menu {
+  background-color: $backgroundSecondary;
+  width: 300px;
+  border: 3px solid $backgroundTertiary;
+  text-align: center;
+  margin: 0 auto;
+
+  .menuContent {
+    padding: 1em;
+  }
+
+}
