--- a/src/components/practice/index.scss
+++ b/src/components/practice/index.scss
@@ -1,4 +1,4 @@
-@import '../../vars.scss';
+@import "../../vars.scss";
 
 .practice__container {
   width: 100%;
@@ -13,8 +13,14 @@
   border-top: 1px solid #444;
   border-bottom: 1px solid #444;
   background-color: #222;
-  filter: drop-shadow(3px 3px 3px #111);
-  background: linear-gradient(0deg, #1b1818 0%,#1b1818 33%,#201f1d 61%,#202020 100%);
+  box-shadow: 3px 3px 4px #111;
+  background: linear-gradient(
+    0deg,
+    #1b1818 0%,
+    #1b1818 33%,
+    #201f1d 61%,
+    #202020 100%
+  );
 }
 
 .practice__kanaContainer {
@@ -33,21 +39,22 @@
 }
 
 .practice__romajiInput input {
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   height: 100%;
-  color: #FFF;
+  color: #fff;
   font-size: 75px;
   border: 0;
   text-align: center;
   border-bottom: 1px solid #666;
-  margin: 10px; 
+  margin: 10px;
   padding: 10px;
   outline: none;
 }
 
 .practice__singleKanaAnswer {
-  font-size: 25px;
-  color: #AAA;
+  font-size: 20px;
+  font-weight: lighter;
+  color: #aaa;
   font-style: italic;
   position: absolute;
   text-align: center;
@@ -69,10 +76,10 @@
 }
 
 .practice__singleKana.active {
-  color: #DDD;
+  color: #ddd;
 }
 
-.practice__singleKana.correct {
+.practice__singleKana.right {
   color: rgb(89, 168, 89);
 }
 
@@ -80,5 +87,93 @@
   color: rgb(87, 20, 20);
 }
 
+.practice__infoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.practice__timer {
+  display: inline-block;
+  margin: 0 20px;
+}
 
+.practice__percentage {
+  display: inline-block;
+  margin: 0 20px;
+}
+
+.practice__progressBar {
+  position: relative;
+  margin: 0 auto;
+  width: 125px;
+  border: 1px solid rgb(196, 196, 196);
+  height: 15px;
+}
+
+.practice__progressBarInner {
+  background-color: rgb(196, 196, 196);
+  height: 15px;
+  position: absolute;
+  transition: width 0.25s ease-in;
+  left: 0;
+  top: 0;
+}
+
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.practice__singleKana.right {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+  animation-duration: 0.75s;
+  animation-iteration-count: 1;
+  -webkit-transform-origin: center bottom;
+  transform-origin: center bottom;
+}
+
+@keyframes shake {
+  from,
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+  }
+}
+
+.practice__singleKana.wrong {
+  -webkit-animation-name: shake;
+  animation-name: shake;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+}
