--- a/src/Kanary2.scss
+++ b/src/Kanary2.scss
@@ -6,6 +6,7 @@ html {
   background: linear-gradient(17deg, $backgroundGradientA 0%, $backgroundGradientB 100%);
   background-color: rgb(19, 19, 19);
   background-attachment: fixed;
+  height: 100%;
 }
 
 body { 
@@ -16,6 +17,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: $font2;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 a {
@@ -27,7 +33,7 @@ a {
   display: flex;
   font-family: $font1;
   font-weight: lighter;
-  min-height: 100vh;
+  min-height: 100%;
   flex-direction: column;
 }
 
