--- a/src/Kanary2.scss
+++ b/src/Kanary2.scss
@@ -69,6 +69,7 @@ a {
 .menu {
   background-color: $backgroundSecondary;
   width: 300px;
+  min-height: 250px;
   border: 3px solid $backgroundTertiary;
   text-align: center;
   margin: 0 auto;
