--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -32,7 +32,14 @@
     display: block;
     margin-top: 20px;
     font-size: 25px;
+    font-weight: bold;
     background-color: #262626;
+    border-top: 3px solid #333;
+    transition: background-color 0.5s ease;
+  }
+
+  .results__againLink:hover {
+    background-color: #353535;
   }
 
   .results__numbersContainer {
